# Genesys-Simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  ContextMemmory.md  DYNAMIC_PARSER_REPORT.md  ExperimentManagerDefaultImpl1.cpp  ExperimentManagerDefaultImpl1.h  ExperimentManagerExampleOfSimulation.cpp  ExperimentManagerExampleOfSimulation.h  ExperimetManager_if.h  FASE0_DIAGNOSTICO.md  FirstExampleOfSimulation.cpp  GRO_ContextMemory.md  IMPLEMENTACAO.md  KERNEL_GUI_ContextMemory.md  Makefile  PLANO.md  PROJECT_ANALYSIS.md  README.md  README_TEMA5_VIDEO.md  SamplerDefaultImpl1.cpp  SamplerDefaultImpl1.h  SimulationScenario.cpp  SimulationScenario.h  TINKERCELL_ContextMemory.md  TODO.md  Traits.h  classificacao-animacoes.md  comandos.txt  model.txt  networkModel.gen  orientations_4_updates.md  proposta.md  report-issue-clean.patch  thoughts  todo.txt
examples/: CMakeLists.txt  analysis_tools_example.cpp  examples_analysis_tools.cpp  fit_analysis.cpp  simulation_analysis_example.cpp
examples/data/: sample_data.csv  sample_group_a.csv  sample_group_b.csv
source/applications/distributed/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  DistributedExecutionManager.cpp  DistributedExecutionManager.h  ParallelAndDistributedManager.cpp  ParallelAndDistributedManager.h  ParallelExecutionManager.cpp  ParallelExecutionManager.h  README.md  Utils.h  demonstrate-requirements.sh  ip.txt  main.cpp  run-distributed-demo.sh
source/applications/mcp/: README.md  pyproject.toml
source/applications/terminal/: CMakeLists.txt  TraitsTerminalApp.h  main.cpp
source/applications/web/: BaseGenesysWebApplication.cpp  BaseGenesysWebApplication.h  CMakeLists.txt  README.md  SimpleHttpServer.cpp  SimpleHttpServer.h  main.cpp
source/kernel/simulator/: Attribute.cpp  Attribute.h  CMakeLists.txt  ComponentManager.cpp  ComponentManager.h  ConnectionManager.cpp  ConnectionManager.h  Counter.cpp  Counter.h  CppSerializer.cpp  CppSerializer.h  Entity.cpp  Entity.h  EntityType.cpp  EntityType.h  Event.h  ExperimentManager.cpp  ExperimentManager.h  ExperimentManagerDefaultImpl1.cpp  ExperimentManagerDefaultImpl1.h  ExperimetManager_if.h  GenSerializer.cpp  GenSerializer.h  GenesysPropertyIntrospection.cpp  GenesysPropertyIntrospection.h  JsonSerializer.cpp  JsonSerializer.h  LicenceManager.cpp  Model.cpp  Model.h  ModelCheckerDefaultImpl1.cpp  ModelCheckerDefaultImpl1.h  ModelChecker_if.h  ModelComponent.cpp  ModelComponent.h  ModelDataDefinition.cpp  ModelDataDefinition.h  ModelDataDefinitionAssociations.cpp  ModelDataManager.cpp  ModelDataManager.h  (+68 more)
source/kernel/statistics/: CMakeLists.txt  CollectorDatafileDefaultImpl1.cpp  CollectorDatafileDefaultImpl1.h  CollectorDatafile_if.h  CollectorDefaultImpl1.h  Collector_if.h  SamplerBoostImpl.h  SamplerDefaultImpl1.cpp  SamplerDefaultImpl1.h  Sampler_if.h  SorttFile.h  StatisticsDataFileDefaultImpl.cpp  StatisticsDataFileDefaultImpl.h  StatisticsDataFile_if.h  StatisticsDefaultImpl1.cpp  StatisticsDefaultImpl1.h  Statistics_if.h
source/parser/: CMakeLists.txt  FunctionRegistry.cpp  FunctionRegistry.h  Genesys++-driver.cpp  Genesys++-driver.h  Genesys++-scanner.cpp  GenesysParser.cpp  GenesysParser.h  GenesysParser.output  PARSER_ANALYSIS.md  SemanticResolver.cpp  SemanticResolver.h
source/parser/dynamic/: ParserFactory.cpp  ParserFactory.h
source/parser/parserBisonFlex/: bisonparser.dot  bisonparser.xml  bisonparser.yy  lexerparser.ll
source/plugins/: CMakeLists.txt  PluginConnectorDummyImpl1.cpp  PluginConnectorDummyImpl1.h  PluginConnectorDynamicLibraryLoader.cpp  PluginConnectorDynamicLibraryLoader.h  PluginConnectorStaticImpl1.cpp  PluginConnectorStaticImpl1.h  StaticCppCompiler.cpp  StaticCppCompiler.h
source/plugins/components/: Access.cpp  Access.h  Assign.cpp  Assign.h  Batch.cpp  Batch.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CellularAutomataComp.cpp  CellularAutomataComp.h  Clone.cpp  Clone.h  CppForG.cpp  CppForG.h  Create.cpp  Create.h  Decide.cpp  Decide.h  DefaultModalModel.cpp  DefaultModalModel.h  Delay.cpp  Delay.h  DiffEquations.cpp  DiffEquations.h  Dispose.cpp  Dispose.h  DropOff.cpp  DropOff.h  DummyComponent.cpp  DummyComponent.h  Enter.cpp  Enter.h  Exit.cpp  Exit.h  FSM.cpp  FSM.h  LSODE.cpp  LSODE.h  Leave.cpp  (+58 more)
source/plugins/data/: AssignmentItem.cpp  AssignmentItem.h  BioNetwork.cpp  BioNetwork.h  BioParameter.cpp  BioParameter.h  BioReaction.cpp  BioReaction.h  BioSimulatorRunner.cpp  BioSimulatorRunner.h  BioSpecies.cpp  BioSpecies.h  CMakeLists.txt  CppCompiler.cpp  CppCompiler.h  DummyElement.cpp  DummyElement.h  EntityGroup.cpp  EntityGroup.h  FSMState.cpp  FSMState.h  FSMTransition.cpp  FSMTransition.h  Failure.cpp  Failure.h  File.cpp  File.h  Formula.cpp  Formula.h  GroProgram.cpp  GroProgram.h  Label.cpp  Label.h  Queue.cpp  Queue.h  RSimulatorRunner.cpp  RSimulatorRunner.h  Resource.cpp  Resource.h  SPICERunner.cpp  (+15 more)
source/tests/: CMakeLists.txt  README.md  diffusion_demo.cpp  test_continuous_system.cpp  test_lsode.cpp  test_ode_solver_numerical_validation.cpp
source/tests/integration/: CMakeLists.txt
source/tests/smoke/: CMakeLists.txt  (+2 more)
source/tools/: AIAssistantDefaultImpl.cpp  AIAssistantDefaultImpl.h  AIAssistant_if.h  AIAuditLog.cpp  ARCHITECTURE_tools.md  AnthropicProviderClientImpl.h  BioKineticLawExpression.h  BioSimulationAnalysis.h  BioSimulationResult.h  CMakeLists.txt  DEVELOPMENT_DataAnalyzer.md  DataAnalyserDefaultImpl.cpp  DataAnalyserDefaultImpl.h  DataAnalyser_if.h  DataAnalyzerDefaultImpl1.cpp  DataAnalyzerDefaultImpl1.h  DataAnalyzer_if.h  DataSet_if.h  DatasetLoader.cpp  DatasetLoader.h  DiffusionMethodOfLinesSystem.h  DiscreteDistribution_if.h  Distribution_if.h  DormandPrince54OdeSolver.h  FitterDefaultImpl.h  FitterDummyImpl.cpp  FitterDummyImpl.h  Fitter_if.h  HypothesisTesterDefaultImpl1.cpp  HypothesisTesterDefaultImpl1.h  HypothesisTesterDefaultImpl2.cpp  HypothesisTesterDefaultImpl2.h  HypothesisTester_if.h  MassActionOdeSystem.h  OdeSolverFactory.h  OptimizerDefaultImpl1.cpp  OptimizerDefaultImpl1.h  Optimizer_if.h  PLAN_DataAnalyzer.md  ProbabilityDistribution.cpp  (+16 more)
(+1313 files in other folders)
