[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "genesys-mcp"
version = "0.1.0"
description = "MCP server that exposes GenESyS simulation capabilities to AI assistants"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
genesys-mcp = "genesys_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["genesys_mcp*"]
